--- a/gg01_data-viz-as-comm.html
+++ b/gg01_data-viz-as-comm.html
@@ -467,7 +467,7 @@ library(tidyverse)</code></pre>
 <li>Apple mobility data: <a href="https://covid19.apple.com/mobility" class="uri">https://covid19.apple.com/mobility</a></li>
 </ul>
 <p>Import the data below</p>
-<pre class="r"><code>AppleMobRaw &lt;- readr::read_csv(&quot;https://bit.ly/apple-mob-raw&quot;)</code></pre>
+<pre class="r"><code>AppleMobRaw &lt;- readr::read_csv(&quot;https://bit.ly/36tTVpe&quot;)</code></pre>
 <div id="tidy-applemobraw" class="section level3" number="5.1.1">
 <h3 number="5.1.1"><span class="header-section-number">5.1.1</span> Tidy <code>AppleMobRaw</code></h3>
 <p>These data need to be restructured into a tidy format.</p>
