--- a/dt00_data-manipulations.html
+++ b/dt00_data-manipulations.html
@@ -418,7 +418,7 @@ library(tidyverse)</code></pre>
 <div id="import-using-url" class="section level3" number="1.2.1">
 <h3 number="1.2.1"><span class="header-section-number">1.2.1</span> Import using url</h3>
 <p>Below we import the <code>original_starwars</code> dataset from the slides using the url. This is similar to providing a local file path (<code>data/original-starwars.csv</code>).</p>
-<pre class="r"><code>read_csv(&quot;https://bit.ly/mini-strwrs&quot;)
+<pre class="r"><code>read_csv(&quot;https://bit.ly/3qgjqSC&quot;)
 #&gt; 
 #&gt; ── Column specification ────────────────────────────────────────────────────────
 #&gt; cols(
@@ -439,7 +439,7 @@ library(tidyverse)</code></pre>
 <h3 number="1.2.2"><span class="header-section-number">1.2.2</span> Import using <code>params</code></h3>
 <p>We have the <code>params</code> list from our YAML header, which we can also use to import the data.</p>
 <pre class="yaml"><code>params: 
-  data_file: !r file.path(&quot;https://bit.ly/mini-strwrs&quot;)</code></pre>
+  data_file: !r file.path(&quot;https://bit.ly/3qgjqSC&quot;)</code></pre>
 <pre class="r"><code>readr::read_csv(params$data_file)
 #&gt; 
 #&gt; ── Column specification ────────────────────────────────────────────────────────
@@ -474,13 +474,13 @@ library(tidyverse)</code></pre>
 <div id="selecting-columns" class="section level2 tabset" number="1.3">
 <h2 class="tabset" number="1.3"><span class="header-section-number">1.3</span> Selecting columns</h2>
 <p>These are exercises to try on your own using the <code>select()</code> function.</p>
-<div id="select-exercise-1" class="section level3" number="1.3.1">
-<h3 number="1.3.1"><span class="header-section-number">1.3.1</span> Select exercise 1</h3>
+<div id="exercise" class="section level3" number="1.3.1">
+<h3 number="1.3.1"><span class="header-section-number">1.3.1</span> exercise</h3>
 <p>Alter the code below to select just the <code>name</code> and <code>homeoworld</code> column:</p>
 <pre class="r"><code>select(original_starwars, name, species, homeworld)</code></pre>
 </div>
-<div id="select-solution-1" class="section level3" number="1.3.2">
-<h3 number="1.3.2"><span class="header-section-number">1.3.2</span> Select solution 1</h3>
+<div id="solution" class="section level3" number="1.3.2">
+<h3 number="1.3.2"><span class="header-section-number">1.3.2</span> solution</h3>
 <pre class="r"><code>select(original_starwars, name, homeworld)</code></pre>
 <div data-pagedtable="false">
 <script data-pagedtable-source type="application/json">
@@ -488,13 +488,13 @@ library(tidyverse)</code></pre>
   </script>
 </div>
 </div>
-<div id="select-exercise-2" class="section level3" number="1.3.3">
-<h3 number="1.3.3"><span class="header-section-number">1.3.3</span> Select exercise 2</h3>
+<div id="exercise-1" class="section level3" number="1.3.3">
+<h3 number="1.3.3"><span class="header-section-number">1.3.3</span> exercise</h3>
 <p>Select only the columns starting with the letter <code>h</code>.</p>
 <pre class="r"><code>select(original_starwars, starts_with(&quot;_&quot;))</code></pre>
 </div>
-<div id="select-solution-2" class="section level3" number="1.3.4">
-<h3 number="1.3.4"><span class="header-section-number">1.3.4</span> Select solution 2</h3>
+<div id="solution-1" class="section level3" number="1.3.4">
+<h3 number="1.3.4"><span class="header-section-number">1.3.4</span> solution</h3>
 <pre class="r"><code>select(original_starwars, starts_with(&quot;h&quot;))</code></pre>
 <div data-pagedtable="false">
 <script data-pagedtable-source type="application/json">
@@ -506,13 +506,13 @@ library(tidyverse)</code></pre>
 <div id="filtering-rows" class="section level2 tabset" number="1.4">
 <h2 class="tabset" number="1.4"><span class="header-section-number">1.4</span> Filtering rows</h2>
 <p>These are some additional exercises for <code>filter()</code>ing data.</p>
-<div id="filtering-exercise-1" class="section level3" number="1.4.1">
-<h3 number="1.4.1"><span class="header-section-number">1.4.1</span> Filtering exercise 1</h3>
+<div id="exercise-2" class="section level3" number="1.4.1">
+<h3 number="1.4.1"><span class="header-section-number">1.4.1</span> exercise</h3>
 <p>Change the code below so <code>original_starwars</code> only includes the droids.</p>
 <pre class="r"><code>filter(original_starwars, species == &quot;____&quot;)</code></pre>
 </div>
-<div id="filtering-solution-1" class="section level3" number="1.4.2">
-<h3 number="1.4.2"><span class="header-section-number">1.4.2</span> Filtering solution 1</h3>
+<div id="solution-2" class="section level3" number="1.4.2">
+<h3 number="1.4.2"><span class="header-section-number">1.4.2</span> solution</h3>
 <pre class="r"><code>filter(original_starwars, species == &quot;Droid&quot;)</code></pre>
 <div data-pagedtable="false">
 <script data-pagedtable-source type="application/json">
@@ -520,14 +520,14 @@ library(tidyverse)</code></pre>
   </script>
 </div>
 </div>
-<div id="filtering-exercise-2" class="section level3" number="1.4.3">
-<h3 number="1.4.3"><span class="header-section-number">1.4.3</span> Filtering exercise 2</h3>
+<div id="exercise-3" class="section level3" number="1.4.3">
+<h3 number="1.4.3"><span class="header-section-number">1.4.3</span> exercise</h3>
 <p>Change the code below so <code>original_starwars</code> only includes data from the <code>homeworld</code>s of <code>Tatooine</code> and <code>Alderaan</code></p>
 <pre class="r"><code>filter(original_starwars, 
        homeworld %in% c(&quot;________&quot;, &quot;________&quot;))</code></pre>
 </div>
-<div id="filtering-solution-2" class="section level3" number="1.4.4">
-<h3 number="1.4.4"><span class="header-section-number">1.4.4</span> Filtering solution 2</h3>
+<div id="solution-3" class="section level3" number="1.4.4">
+<h3 number="1.4.4"><span class="header-section-number">1.4.4</span> solution</h3>
 <pre class="r"><code>filter(original_starwars, 
        homeworld %in% c(&quot;Tatooine&quot;, &quot;Alderaan&quot;))</code></pre>
 <div data-pagedtable="false">
@@ -540,13 +540,13 @@ library(tidyverse)</code></pre>
 <div id="arranging-data" class="section level2 tabset" number="1.5">
 <h2 class="tabset" number="1.5"><span class="header-section-number">1.5</span> Arranging data</h2>
 <p><code>arrange()</code> sorts variables on their content, numeric or character.</p>
-<div id="arrange-exercise-1" class="section level3" number="1.5.1">
-<h3 number="1.5.1"><span class="header-section-number">1.5.1</span> Arrange exercise 1</h3>
+<div id="exercise-4" class="section level3" number="1.5.1">
+<h3 number="1.5.1"><span class="header-section-number">1.5.1</span> exercise</h3>
 <p>Sort <code>original_starwars</code> according to the <code>hair_color</code>.</p>
 <pre class="r"><code>arrange(original_starwars, &quot;____ _____&quot;)</code></pre>
 </div>
-<div id="arrange-solution-1" class="section level3" number="1.5.2">
-<h3 number="1.5.2"><span class="header-section-number">1.5.2</span> Arrange solution 1</h3>
+<div id="solution-4" class="section level3" number="1.5.2">
+<h3 number="1.5.2"><span class="header-section-number">1.5.2</span> solution</h3>
 <p>Note that the missing values are sorted to the bottom.</p>
 <pre class="r"><code>arrange(original_starwars, hair_color)</code></pre>
 <div data-pagedtable="false">
@@ -555,13 +555,13 @@ library(tidyverse)</code></pre>
   </script>
 </div>
 </div>
-<div id="arrange-exercise-2" class="section level3" number="1.5.3">
-<h3 number="1.5.3"><span class="header-section-number">1.5.3</span> Arrange exercise 2</h3>
+<div id="exercise-5" class="section level3" number="1.5.3">
+<h3 number="1.5.3"><span class="header-section-number">1.5.3</span> exercise</h3>
 <p>Sort <code>original_starwars</code> by <code>height</code> and <code>mass</code>, descending.</p>
 <pre class="r"><code>arrange(original_starwars, desc(______, ____))</code></pre>
 </div>
-<div id="arrange-solution-2" class="section level3" number="1.5.4">
-<h3 number="1.5.4"><span class="header-section-number">1.5.4</span> Arrange solution 2</h3>
+<div id="solution-5" class="section level3" number="1.5.4">
+<h3 number="1.5.4"><span class="header-section-number">1.5.4</span> solution</h3>
 <pre class="r"><code>arrange(original_starwars, desc(height, mass))</code></pre>
 <div data-pagedtable="false">
 <script data-pagedtable-source type="application/json">
@@ -574,14 +574,14 @@ library(tidyverse)</code></pre>
 <div id="mutate-columns" class="section level2 tabset" number="1.6">
 <h2 class="tabset" number="1.6"><span class="header-section-number">1.6</span> Mutate columns</h2>
 <p><code>mutate()</code> can create new columns, or change existing columns.</p>
-<div id="mutate-exercise-1" class="section level3" number="1.6.1">
-<h3 number="1.6.1"><span class="header-section-number">1.6.1</span> Mutate exercise 1</h3>
+<div id="exercise-6" class="section level3" number="1.6.1">
+<h3 number="1.6.1"><span class="header-section-number">1.6.1</span> exercise</h3>
 <p>Alter the code below to create a <code>bmi</code> column for <code>starwars</code> characters in <code>original_starwars</code>.</p>
 <pre class="r"><code>mutate(original_starwars, 
        bmi = ____ / ((______ / 100) ^ 2))</code></pre>
 </div>
-<div id="mutate-solution-1" class="section level3" number="1.6.2">
-<h3 number="1.6.2"><span class="header-section-number">1.6.2</span> Mutate solution 1</h3>
+<div id="solution-6" class="section level3" number="1.6.2">
+<h3 number="1.6.2"><span class="header-section-number">1.6.2</span> solution</h3>
 <p>Note the use of parentheses here.</p>
 <pre class="r"><code>mutate(original_starwars, 
        bmi = mass / ((height / 100) ^ 2))</code></pre>
@@ -591,15 +591,15 @@ library(tidyverse)</code></pre>
   </script>
 </div>
 </div>
-<div id="mutate-exercise-2" class="section level3" number="1.6.3">
-<h3 number="1.6.3"><span class="header-section-number">1.6.3</span> Mutate exercise 2</h3>
+<div id="exercise-7" class="section level3" number="1.6.3">
+<h3 number="1.6.3"><span class="header-section-number">1.6.3</span> exercise</h3>
 <p>Round the new <code>bmi</code> variable to 1 digit.</p>
 <pre class="r"><code>mutate(original_starwars, 
        bmi = mass / ((height / 100) ^ 2),
        bmi = _____(___, digits = _))</code></pre>
 </div>
-<div id="mutate-solution-2" class="section level3" number="1.6.4">
-<h3 number="1.6.4"><span class="header-section-number">1.6.4</span> Mutate solution 2</h3>
+<div id="solution-7" class="section level3" number="1.6.4">
+<h3 number="1.6.4"><span class="header-section-number">1.6.4</span> solution</h3>
 <pre class="r"><code>mutate(original_starwars, 
        bmi = mass / ((height / 100) ^ 2),
        bmi = round(bmi, digits = 1))</code></pre>
@@ -613,15 +613,15 @@ library(tidyverse)</code></pre>
 <div id="function-pipelines" class="section level2 tabset" number="1.7">
 <h2 class="tabset" number="1.7"><span class="header-section-number">1.7</span> Function pipelines</h2>
 <p>The pipe (<code>%&gt;%</code>) takes an object that comes before it, and it drops the object into the function that comes after it.</p>
-<div id="pipe-exercise-1" class="section level3" number="1.7.1">
-<h3 number="1.7.1"><span class="header-section-number">1.7.1</span> Pipe exercise 1</h3>
+<div id="exercise-8" class="section level3" number="1.7.1">
+<h3 number="1.7.1"><span class="header-section-number">1.7.1</span> exercise</h3>
 <p>Rewrite the code below to use the pipe</p>
 <pre class="r"><code>select(filter(
           original_starwars, mass &lt; ___), 
               ____, hair_color, _______, homeworld)</code></pre>
 </div>
-<div id="pipe-solutons-1" class="section level3" number="1.7.2">
-<h3 number="1.7.2"><span class="header-section-number">1.7.2</span> Pipe solutons 1</h3>
+<div id="solution-8" class="section level3" number="1.7.2">
+<h3 number="1.7.2"><span class="header-section-number">1.7.2</span> solution</h3>
 <p>This actually wouldn’t matter what order it was in–both would return the same result.</p>
 <pre class="r"><code>original_starwars %&gt;% 
   filter(mass &lt; 100) %&gt;% 
@@ -632,8 +632,8 @@ library(tidyverse)</code></pre>
   </script>
 </div>
 </div>
-<div id="pipe-exercise-2" class="section level3" number="1.7.3">
-<h3 number="1.7.3"><span class="header-section-number">1.7.3</span> Pipe exercise 2</h3>
+<div id="exercise-9" class="section level3" number="1.7.3">
+<h3 number="1.7.3"><span class="header-section-number">1.7.3</span> exercise</h3>
 <p>Perform the following operations <em>without</em> using the pipe.</p>
 <ol style="list-style-type: decimal">
 <li>create object <code>x</code> with three values, (<code>3</code>, <code>7</code>, <code>12</code>)<br />
@@ -649,8 +649,8 @@ mean_x &lt;- ____(x)
 # 3 
 sqrt(______)</code></pre>
 </div>
-<div id="pipe-soluton-2" class="section level3" number="1.7.4">
-<h3 number="1.7.4"><span class="header-section-number">1.7.4</span> Pipe soluton 2</h3>
+<div id="soluton" class="section level3" number="1.7.4">
+<h3 number="1.7.4"><span class="header-section-number">1.7.4</span> soluton</h3>
 <p>This returns a vector, not a <code>tibble</code>.</p>
 <pre class="r"><code># 1) 
 x &lt;- c(3, 7, 12)
@@ -660,8 +660,8 @@ mean_x &lt;- mean(x)
 sqrt(mean_x)
 #&gt; [1] 2.708013</code></pre>
 </div>
-<div id="pipe-exercise-3" class="section level3" number="1.7.5">
-<h3 number="1.7.5"><span class="header-section-number">1.7.5</span> Pipe exercise 3</h3>
+<div id="exercise-10" class="section level3" number="1.7.5">
+<h3 number="1.7.5"><span class="header-section-number">1.7.5</span> exercise</h3>
 <p>Perform the following operations <em>with</em> the pipe.</p>
 <ol style="list-style-type: decimal">
 <li>create object <code>x</code> with three values, (<code>3</code>, <code>7</code>, <code>12</code>)<br />
@@ -674,8 +674,8 @@ sqrt(mean_x)
   ____() %&gt;% 
   ____()</code></pre>
 </div>
-<div id="pipe-solutons-3" class="section level3" number="1.7.6">
-<h3 number="1.7.6"><span class="header-section-number">1.7.6</span> Pipe solutons 3</h3>
+<div id="solution-9" class="section level3" number="1.7.6">
+<h3 number="1.7.6"><span class="header-section-number">1.7.6</span> solution</h3>
 <p>Note that we can create a pipeline without even creating an object.</p>
 <pre class="r"><code>c(3, 7, 12) %&gt;% 
   mean() %&gt;% 
