--- a/bk02_flow-control-statements.html
+++ b/bk02_flow-control-statements.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Lessons and Exercises</title>
+<title>R Programming: Subsetting and Flow Control Statements</title>
 
 <script src="site_libs/header-attrs-2.5.3/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -20,13 +20,16 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
+<script src="site_libs/pagedtable-1.1/js/pagedtable.js"></script>
 <link href="site_libs/anchor-sections-1.0.1/anchor-sections.css" rel="stylesheet" />
 <script src="site_libs/anchor-sections-1.0.1/anchor-sections.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -263,6 +266,69 @@ $(document).ready(function () {
 
 
 
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
+
+
 
 </head>
 
@@ -270,6 +336,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row-fluid">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -309,50 +385,51 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">Lessons and Exercises</h1>
+<h1 class="title toc-ignore">R Programming: Subsetting and Flow Control Statements</h1>
 
 </div>
 
 
-<div id="introduction-to-r-rstudio" class="section level3">
-<h3>Introduction to R &amp; RStudio</h3>
-<ul>
-<li><a href="bk00_workflow-best-practices.html">R Workflow Best Practices</a> <em>managing code, data, and files</em></li>
-<li><a href="bk01_functions-and-objects.html">Introduction to R Programming</a> <em>functions and objects</em></li>
-<li><a href="bk02_flow-control-statements.html">R Programming: Subsetting and Flow Control Statements</a> <em>change the flow of your code</em></li>
-</ul>
+<div id="objectives" class="section level1" number="1">
+<h1 number="1"><span class="header-section-number">1</span> Objectives</h1>
+<p>This section contains a basic overview of R’s subsetting syntax (<code>[[</code>, <code>[</code>, and <code>$</code>) and flow control functions (<code>if</code>, <code>ifelse</code>, and <code>switch</code>), and how they can be used to control data workflows.</p>
+<div id="subset-vectors" class="section level2 tabset" number="1.1">
+<h2 class="tabset" number="1.1"><span class="header-section-number">1.1</span> Subset vectors</h2>
+<p>Vectors are the fundamental data type in R. Below we assign five numbers to the vector <code>vec</code>.</p>
+<pre class="r"><code>num_vec &lt;- c(2, 9, 4, 3, 7)
+num_vec
+#&gt; [1] 2 9 4 3 7</code></pre>
+<p>These five numbers exist in five different positions within the vector, and we can subset them using a bracket with the numerical</p>
+<div id="subset-using" class="section level3" number="1.1.1">
+<h3 number="1.1.1"><span class="header-section-number">1.1.1</span> subset using <code>[</code></h3>
+<p>Here are the numbers located at positions <code>[1]</code> and position <code>[5]</code></p>
+<pre class="r"><code>num_vec[1]
+#&gt; [1] 2
+num_vec[5]
+#&gt; [1] 7</code></pre>
 </div>
-<div id="reproducible-analysis-with-r-markdown" class="section level3">
-<h3>Reproducible Analysis With R Markdown</h3>
-<ul>
-<li><a href="mk00_rmarkdown-exercises.html">Reproducible Reporting With R Markdown</a> <em>building reproducible reports</em></li>
-</ul>
+<div id="subset-using-1" class="section level3" number="1.1.2">
+<h3 number="1.1.2"><span class="header-section-number">1.1.2</span> subset using <code>$</code></h3>
+<p>We can subset using the <code>$</code> when we’re</p>
 </div>
-<div id="data-manipulation-and-transformation" class="section level3">
-<h3>Data Manipulation and Transformation</h3>
-<ul>
-<li><a href="dt00_data-manipulations.html">Introduction to Data Manipulation</a> <em>introduction to wrangling data</em></li>
-<li><a href="dt01_data-trans-joins-exercises.html">Reshaping, Transforming, and Joining Data in R</a> <em>transpose, pivot, split, and combine data</em></li>
-<li><a href="dt02_adv-data-manip-joins.html">Advanced Data Transformation and Manipulation</a> <em>dealing with complex data structures</em></li>
-</ul>
 </div>
-<div id="data-visualization" class="section level3">
-<h3>Data Visualization</h3>
-<ul>
-<li><a href="gg00_intro-to-data-viz.html">Introduction to Data Visualization with ggplot2</a> <em>introducing the grammar of graphics (ggplot2)</em></li>
-<li><a href="gg01_data-viz-as-comm.html">Data Visualization as Communication</a> <em>using graphs to effectively share ideas</em></li>
-<li><a href="gg02_adv-data-viz.html">Advanced Data Visualization</a> <em>extending ggplot2</em></li>
-</ul>
+<div id="subset-data-framestibbes" class="section level2 tabset" number="1.2">
+<h2 class="tabset" number="1.2"><span class="header-section-number">1.2</span> Subset data frames/tibbes</h2>
 </div>
-<div id="dashboards-and-shiny" class="section level3">
-<h3>Dashboards and Shiny</h3>
-<p><em>coming soon!</em></p>
-<p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+<div id="subset" class="section level2 tabset" number="1.3">
+<h2 class="tabset" number="1.3"><span class="header-section-number">1.3</span> Subset</h2>
+</div>
+<div id="if" class="section level2 tabset" number="1.4">
+<h2 class="tabset" number="1.4"><span class="header-section-number">1.4</span> <code>if</code></h2>
+<p>The <code>if</code> statement can be used to</p>
+</div>
 </div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
+</div>
+</div>
 
 </div>
 
@@ -385,6 +462,32 @@ $(document).ready(function () {
 
 <!-- code folding -->
 
+<script>
+$(document).ready(function ()  {
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3,h4,h5",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
