--- a/sh00_intro-to-dashboards.html
+++ b/sh00_intro-to-dashboards.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Lessons and Exercises</title>
+<title>Introduction to Dashboards</title>
 
 <script src="site_libs/header-attrs-2.5.3/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -20,13 +20,17 @@
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
+<script src="site_libs/jqueryui-1.11.4/jquery-ui.min.js"></script>
+<link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
+<script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
+<link href="site_libs/pagedtable-1.1/css/pagedtable.css" rel="stylesheet" />
+<script src="site_libs/pagedtable-1.1/js/pagedtable.js"></script>
 <link href="site_libs/anchor-sections-1.0.1/anchor-sections.css" rel="stylesheet" />
 <script src="site_libs/anchor-sections-1.0.1/anchor-sections.js"></script>
-<link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
-<link href="site_libs/font-awesome-5.1.0/css/v4-shims.css" rel="stylesheet" />
 
 <style type="text/css">
   code{white-space: pre-wrap;}
@@ -260,7 +264,73 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
+<style type="text/css">
+.code-folding-btn { margin-bottom: 4px; }
+</style>
 
+
+
+<style type="text/css">
+
+#TOC {
+  margin: 25px 0px 20px 0px;
+}
+@media (max-width: 768px) {
+#TOC {
+  position: relative;
+  width: 100%;
+}
+}
+
+@media print {
+.toc-content {
+  /* see https://github.com/w3c/csswg-drafts/issues/4434 */
+  float: right;
+}
+}
+
+.toc-content {
+  padding-left: 30px;
+  padding-right: 40px;
+}
+
+div.main-container {
+  max-width: 1200px;
+}
+
+div.tocify {
+  width: 20%;
+  max-width: 260px;
+  max-height: 85%;
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  div.tocify {
+    width: 25%;
+  }
+}
+
+@media (max-width: 767px) {
+  div.tocify {
+    width: 100%;
+    max-width: none;
+  }
+}
+
+.tocify ul, .tocify li {
+  line-height: 20px;
+}
+
+.tocify-subheader .tocify-item {
+  font-size: 0.90em;
+}
+
+.tocify .list-group-item {
+  border-radius: 0px;
+}
+
+
+</style>
 
 
 
@@ -270,6 +340,16 @@ $(document).ready(function () {
 
 
 <div class="container-fluid main-container">
+
+
+<!-- setup 3col/9col grid for toc_float and main content  -->
+<div class="row-fluid">
+<div class="col-xs-12 col-sm-4 col-md-3">
+<div id="TOC" class="tocify">
+</div>
+</div>
+
+<div class="toc-content col-xs-12 col-sm-8 col-md-9">
 
 
 
@@ -307,52 +387,46 @@ $(document).ready(function () {
 
 <div class="fluid-row" id="header">
 
-
-
-<h1 class="title toc-ignore">Lessons and Exercises</h1>
-
-</div>
-
-
-<div id="introduction-to-r-rstudio" class="section level3">
-<h3>Introduction to R &amp; RStudio</h3>
-<ul>
-<li><a href="bk00_workflow-best-practices.html">R Workflow Best Practices</a> <em>managing code, data, and files</em></li>
-<li><a href="bk01_functions-and-objects.html">Introduction to R Programming</a> <em>functions and objects</em></li>
-<li><a href="bk02_flow-control-statements.html">R Programming: Subsetting and Flow Control Statements</a> <em>change the flow of your code</em></li>
+<div class="btn-group pull-right">
+<button type="button" class="btn btn-default btn-xs dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<ul class="dropdown-menu" style="min-width: 50px;">
+<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
+<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
 </ul>
 </div>
-<div id="reproducible-analysis-with-r-markdown" class="section level3">
-<h3>Reproducible Analysis With R Markdown</h3>
+
+
+
+<h1 class="title toc-ignore">Introduction to Dashboards</h1>
+
+</div>
+
+
+<div id="objectives" class="section level1" number="1">
+<h1 number="1"><span class="header-section-number">1</span> Objectives</h1>
+<p>An introduction to dashboard development in R with <code>flexdashboard</code>s.</p>
+</div>
+<div id="materials" class="section level1" number="2">
+<h1 number="2"><span class="header-section-number">2</span> Materials</h1>
 <ul>
-<li><a href="mk00_rmarkdown-exercises.html">Reproducible Reporting With R Markdown</a> <em>building reproducible reports</em></li>
+<li><p>Slides: <a href="https://mjfrigaard.github.io/intro-to-dashboards/Index.html" class="uri">https://mjfrigaard.github.io/intro-to-dashboards/Index.html</a></p></li>
+<li><p>RStudio Project: <a href="https://rstudio.cloud/project/2000287" class="uri">https://rstudio.cloud/project/2000287</a></p></li>
 </ul>
 </div>
-<div id="data-manipulation-and-transformation" class="section level3">
-<h3>Data Manipulation and Transformation</h3>
-<ul>
-<li><a href="dt00_data-manipulations.html">Introduction to Data Manipulation</a> <em>introduction to wrangling data</em></li>
-<li><a href="dt01_data-trans-joins-exercises.html">Reshaping, Transforming, and Joining Data in R</a> <em>transpose, pivot, split, and combine data</em></li>
-<li><a href="dt02_adv-data-manip-joins.html">Advanced Data Transformation and Manipulation</a> <em>dealing with complex data structures</em></li>
-</ul>
+<div id="previous-lessons" class="section level1" number="3">
+<h1 number="3"><span class="header-section-number">3</span> Previous lessons</h1>
+<p>All of the exercises and lessons are available <a href="https://mjfrigaard.github.io/r-meetup-tutorials/">here</a>, but you can also read more about <a href="https://ggplot2.tidyverse.org/index.html"><code>ggplot2</code></a> on the tidyverse website, and in the <a href="https://r4ds.had.co.nz/data-visualisation.html">Data Visualisation</a> chapter of R for Data Science.</p>
 </div>
-<div id="data-visualization" class="section level3">
-<h3>Data Visualization</h3>
-<ul>
-<li><a href="gg00_intro-to-data-viz.html">Introduction to Data Visualization with ggplot2</a> <em>introducing the grammar of graphics (ggplot2)</em></li>
-<li><a href="gg01_data-viz-as-comm.html">Data Visualization as Communication</a> <em>using graphs to effectively share ideas</em></li>
-<li><a href="gg02_adv-data-viz.html">Advanced Data Visualization</a> <em>extending ggplot2</em></li>
-</ul>
-</div>
-<div id="dashboards-and-shiny" class="section level3">
-<h3>Dashboards and Shiny</h3>
-<p><em>coming soon!</em></p>
-<p>This work is licensed under a <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
+<div id="load-the-tidyverse" class="section level1" number="4">
+<h1 number="4"><span class="header-section-number">4</span> Load the <code>tidyverse</code></h1>
+<p>The main packages we’re going to use are <code>dplyr</code>, <code>tidyr</code>, and <code>ggplot2</code>. These are all part of the <code>tidyverse</code>, so we’ll import this package below:</p>
 </div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
 
 
+</div>
+</div>
 
 </div>
 
@@ -384,7 +458,38 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
+<script>
+$(document).ready(function () {
+  window.initializeCodeFolding("show" === "show");
+});
+</script>
 
+<script>
+$(document).ready(function ()  {
+
+    // move toc-ignore selectors from section div to header
+    $('div.section.toc-ignore')
+        .removeClass('toc-ignore')
+        .children('h1,h2,h3,h4,h5').addClass('toc-ignore');
+
+    // establish options
+    var options = {
+      selectors: "h1,h2,h3,h4,h5",
+      theme: "bootstrap3",
+      context: '.toc-content',
+      hashGenerator: function (text) {
+        return text.replace(/[.\\/?&!#<>]/g, '').replace(/\s/g, '_');
+      },
+      ignoreSelector: ".toc-ignore",
+      scrollTo: 0
+    };
+    options.showAndHide = true;
+    options.smoothScroll = true;
+
+    // tocify
+    var toc = $("#TOC").tocify(options).data("toc-tocify");
+});
+</script>
 
 <!-- dynamically load mathjax for compatibility with self-contained -->
 <script>
