new advanced data viz

--- a/gg00_intro-to-data-viz.html
+++ b/gg00_intro-to-data-viz.html
@@ -421,8 +421,8 @@ div.tocify {
 <pre class="r"><code>install.packages(&quot;tidyverse&quot;)
 library(tidyverse)</code></pre>
 </div>
-<div id="largest-pharmaceutical-companies" class="section level1" number="5">
-<h1 number="5"><span class="header-section-number">5</span> Largest Pharmaceutical Companies</h1>
+<div id="pharmaceutical-companies" class="section level1" number="5">
+<h1 number="5"><span class="header-section-number">5</span> Pharmaceutical Companies</h1>
 <p>In the slides we had well-formatted dataset. In these exercises, we’re going to import some data from the wild (Wikipedia), because most data aren’t ready to visualize and model when we first get them.</p>
 <div id="import-the-data" class="section level2 tabset" number="5.1">
 <h2 class="tabset" number="5.1"><span class="header-section-number">5.1</span> Import the data</h2>
