--- a/about.html
+++ b/about.html
@@ -312,8 +312,8 @@ $(document).ready(function () {
 </div>
 
 
-<p>This is an <a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html">R Markdown website</a>. The source can be found <a href="https://github.com/mjfrigaard/r-meetup-tutorials">on GitHub</a> and its home on the web is here:</p>
-<p><a href="https://mjfrigaard.github.io/r-meetup-tutorials/" class="uri">https://mjfrigaard.github.io/r-meetup-tutorials/</a></p>
+<p>This is an <a href="http://rmarkdown.rstudio.com/rmarkdown_websites.html">R Markdown website</a>, inspired by the <strong>amazing</strong> tutorials built by <a href="hhttps://apreshill.github.io/data-vis-labs-2018/">Alison Hill</a> and <a href="https://jennybc.github.io/purrr-tutorial/">Jenny Bryan</a>.</p>
+<p>The source can be found <a href="https://github.com/mjfrigaard/r-meetup-tutorials">on GitHub</a> and its home on the web is here: <a href="https://mjfrigaard.github.io/r-meetup-tutorials/" class="uri">https://mjfrigaard.github.io/r-meetup-tutorials/</a></p>
 <p>Who am I?</p>
 <ul>
 <li>Martin Frigaard</li>
@@ -339,78 +339,78 @@ $(document).ready(function () {
 ##  collate  en_US.UTF-8                 
 ##  ctype    en_US.UTF-8                 
 ##  tz       America/Phoenix             
-##  date     2020-12-08                  
+##  date     2020-12-11                  
 ## 
 ## ─ Packages ───────────────────────────────────────────────────────────────────
-##  package      * version  date       lib source        
-##  assertthat     0.2.1    2019-03-21 [1] CRAN (R 4.0.0)
-##  base64enc      0.1-3    2015-07-28 [1] CRAN (R 4.0.0)
-##  BH             1.72.0-3 2020-01-08 [1] CRAN (R 4.0.0)
-##  brio           1.1.0    2020-08-31 [1] CRAN (R 4.0.2)
-##  callr          3.5.1    2020-10-13 [1] CRAN (R 4.0.2)
-##  cli            2.2.0    2020-11-20 [1] CRAN (R 4.0.2)
-##  colorspace     2.0-0    2020-11-11 [1] CRAN (R 4.0.3)
-##  commonmark     1.7      2018-12-01 [1] CRAN (R 4.0.0)
-##  cpp11          0.2.4    2020-11-05 [1] CRAN (R 4.0.2)
-##  crayon         1.3.4    2017-09-16 [1] CRAN (R 4.0.0)
-##  desc           1.2.0    2018-05-01 [1] CRAN (R 4.0.2)
-##  diffobj        0.3.2    2020-10-05 [1] CRAN (R 4.0.2)
-##  digest         0.6.27   2020-10-24 [1] CRAN (R 4.0.2)
-##  dplyr          1.0.2    2020-08-18 [1] CRAN (R 4.0.2)
-##  ellipsis       0.3.1    2020-05-15 [1] CRAN (R 4.0.0)
-##  evaluate       0.14     2019-05-28 [1] CRAN (R 4.0.0)
-##  fansi          0.4.1    2020-01-08 [1] CRAN (R 4.0.0)
-##  farver         2.0.3    2020-01-16 [1] CRAN (R 4.0.0)
-##  fastmap        1.0.1    2019-10-08 [1] CRAN (R 4.0.0)
-##  generics       0.1.0    2020-10-31 [1] CRAN (R 4.0.2)
-##  ggplot2        3.3.2    2020-06-19 [1] CRAN (R 4.0.0)
-##  glue           1.4.2    2020-08-27 [1] CRAN (R 4.0.2)
-##  gtable         0.3.0    2019-03-25 [1] CRAN (R 4.0.0)
-##  htmltools      0.5.0    2020-06-16 [1] CRAN (R 4.0.0)
-##  httpuv         1.5.4    2020-06-06 [1] CRAN (R 4.0.0)
-##  isoband        0.2.3    2020-12-01 [1] CRAN (R 4.0.3)
-##  jsonlite       1.7.1    2020-09-07 [1] CRAN (R 4.0.2)
-##  labeling       0.4.2    2020-10-20 [1] CRAN (R 4.0.3)
-##  later          1.1.0.1  2020-06-05 [1] CRAN (R 4.0.0)
-##  lattice        0.20-41  2020-04-02 [1] CRAN (R 4.0.3)
-##  lifecycle      0.2.0    2020-03-06 [1] CRAN (R 4.0.0)
-##  magrittr       2.0.1    2020-11-17 [1] CRAN (R 4.0.3)
-##  MASS           7.3-53   2020-09-09 [1] CRAN (R 4.0.3)
-##  Matrix         1.2-18   2019-11-27 [1] CRAN (R 4.0.3)
-##  mgcv           1.8-33   2020-08-27 [1] CRAN (R 4.0.3)
-##  mime           0.9      2020-02-04 [1] CRAN (R 4.0.0)
-##  munsell        0.5.0    2018-06-12 [1] CRAN (R 4.0.0)
-##  nlme           3.1-150  2020-10-24 [1] CRAN (R 4.0.2)
-##  pillar         1.4.7    2020-11-20 [1] CRAN (R 4.0.2)
-##  pkgbuild       1.1.0    2020-07-13 [1] CRAN (R 4.0.0)
-##  pkgconfig      2.0.3    2019-09-22 [1] CRAN (R 4.0.0)
-##  pkgload        1.1.0    2020-05-29 [1] CRAN (R 4.0.0)
-##  praise         1.0.0    2015-08-11 [1] CRAN (R 4.0.0)
-##  prettyunits    1.1.1    2020-01-24 [1] CRAN (R 4.0.0)
-##  processx       3.4.5    2020-11-30 [1] CRAN (R 4.0.3)
-##  promises       1.1.1    2020-06-09 [1] CRAN (R 4.0.0)
-##  ps             1.5.0    2020-12-05 [1] CRAN (R 4.0.2)
-##  purrr          0.3.4    2020-04-17 [1] CRAN (R 4.0.0)
-##  R6             2.5.0    2020-10-28 [1] CRAN (R 4.0.3)
-##  RColorBrewer   1.1-2    2014-12-07 [1] CRAN (R 4.0.0)
-##  Rcpp           1.0.5    2020-07-06 [1] CRAN (R 4.0.0)
-##  rematch2       2.1.2    2020-05-01 [1] CRAN (R 4.0.0)
-##  rlang          0.4.9    2020-11-26 [1] CRAN (R 4.0.3)
-##  rprojroot      2.0.2    2020-11-15 [1] CRAN (R 4.0.3)
-##  rstudioapi     0.13     2020-11-12 [1] CRAN (R 4.0.3)
-##  scales         1.1.1    2020-05-11 [1] CRAN (R 4.0.0)
-##  shiny          1.5.0    2020-06-23 [1] CRAN (R 4.0.2)
-##  sourcetools    0.1.7    2018-04-25 [1] CRAN (R 4.0.0)
-##  testthat       3.0.0    2020-10-31 [1] CRAN (R 4.0.2)
-##  tibble         3.0.4    2020-10-12 [1] CRAN (R 4.0.2)
-##  tidyr          1.1.2    2020-08-27 [1] CRAN (R 4.0.2)
-##  tidyselect     1.1.0    2020-05-11 [1] CRAN (R 4.0.0)
-##  utf8           1.1.4    2018-05-24 [1] CRAN (R 4.0.0)
-##  vctrs          0.3.5    2020-11-17 [1] CRAN (R 4.0.3)
-##  viridisLite    0.3.0    2018-02-01 [1] CRAN (R 4.0.0)
-##  waldo          0.2.3    2020-11-09 [1] CRAN (R 4.0.3)
-##  withr          2.3.0    2020-09-22 [1] CRAN (R 4.0.2)
-##  xtable         1.8-4    2019-04-21 [1] CRAN (R 4.0.0)
+##  package      * version  date       lib source           
+##  assertthat     0.2.1    2019-03-21 [1] CRAN (R 4.0.0)   
+##  base64enc      0.1-3    2015-07-28 [1] CRAN (R 4.0.0)   
+##  BH             1.72.0-3 2020-01-08 [1] CRAN (R 4.0.0)   
+##  brio           1.1.0    2020-08-31 [1] CRAN (R 4.0.2)   
+##  callr          3.5.1    2020-10-13 [1] CRAN (R 4.0.2)   
+##  cli            2.2.0    2020-11-20 [1] CRAN (R 4.0.2)   
+##  colorspace     2.0-0    2020-11-10 [1] R-Forge (R 4.0.3)
+##  commonmark     1.7      2018-12-01 [1] CRAN (R 4.0.0)   
+##  cpp11          0.2.4    2020-11-05 [1] CRAN (R 4.0.2)   
+##  crayon         1.3.4    2017-09-16 [1] CRAN (R 4.0.0)   
+##  desc           1.2.0    2018-05-01 [1] CRAN (R 4.0.2)   
+##  diffobj        0.3.2    2020-10-05 [1] CRAN (R 4.0.2)   
+##  digest         0.6.27   2020-10-24 [1] CRAN (R 4.0.2)   
+##  dplyr          1.0.2    2020-08-18 [1] CRAN (R 4.0.2)   
+##  ellipsis       0.3.1    2020-05-15 [1] CRAN (R 4.0.0)   
+##  evaluate       0.14     2019-05-28 [1] CRAN (R 4.0.0)   
+##  fansi          0.4.1    2020-01-08 [1] CRAN (R 4.0.0)   
+##  farver         2.0.3    2020-01-16 [1] CRAN (R 4.0.0)   
+##  fastmap        1.0.1    2019-10-08 [1] CRAN (R 4.0.0)   
+##  generics       0.1.0    2020-10-31 [1] CRAN (R 4.0.2)   
+##  ggplot2        3.3.2    2020-06-19 [1] CRAN (R 4.0.0)   
+##  glue           1.4.2    2020-08-27 [1] CRAN (R 4.0.2)   
+##  gtable         0.3.0    2019-03-25 [1] CRAN (R 4.0.0)   
+##  htmltools      0.5.0    2020-06-16 [1] CRAN (R 4.0.0)   
+##  httpuv         1.5.4    2020-06-06 [1] CRAN (R 4.0.0)   
+##  isoband        0.2.3    2020-12-01 [1] CRAN (R 4.0.3)   
+##  jsonlite       1.7.2    2020-12-09 [1] CRAN (R 4.0.3)   
+##  labeling       0.4.2    2020-10-20 [1] CRAN (R 4.0.3)   
+##  later          1.1.0.1  2020-06-05 [1] CRAN (R 4.0.0)   
+##  lattice        0.20-41  2020-04-02 [1] CRAN (R 4.0.3)   
+##  lifecycle      0.2.0    2020-03-06 [1] CRAN (R 4.0.0)   
+##  magrittr       2.0.1    2020-11-17 [1] CRAN (R 4.0.3)   
+##  MASS           7.3-53   2020-09-09 [1] CRAN (R 4.0.3)   
+##  Matrix         1.2-18   2019-11-27 [1] CRAN (R 4.0.3)   
+##  mgcv           1.8-33   2020-08-27 [1] CRAN (R 4.0.3)   
+##  mime           0.9      2020-02-04 [1] CRAN (R 4.0.0)   
+##  munsell        0.5.0    2018-06-12 [1] CRAN (R 4.0.0)   
+##  nlme           3.1-150  2020-10-24 [1] CRAN (R 4.0.2)   
+##  pillar         1.4.7    2020-11-20 [1] CRAN (R 4.0.2)   
+##  pkgbuild       1.1.0    2020-07-13 [1] CRAN (R 4.0.0)   
+##  pkgconfig      2.0.3    2019-09-22 [1] CRAN (R 4.0.0)   
+##  pkgload        1.1.0    2020-05-29 [1] CRAN (R 4.0.0)   
+##  praise         1.0.0    2015-08-11 [1] CRAN (R 4.0.0)   
+##  prettyunits    1.1.1    2020-01-24 [1] CRAN (R 4.0.0)   
+##  processx       3.4.5    2020-11-30 [1] CRAN (R 4.0.3)   
+##  promises       1.1.1    2020-06-09 [1] CRAN (R 4.0.0)   
+##  ps             1.5.0    2020-12-05 [1] CRAN (R 4.0.2)   
+##  purrr          0.3.4    2020-04-17 [1] CRAN (R 4.0.0)   
+##  R6             2.5.0    2020-10-28 [1] CRAN (R 4.0.3)   
+##  RColorBrewer   1.1-2    2014-12-07 [1] CRAN (R 4.0.0)   
+##  Rcpp           1.0.5    2020-07-06 [1] CRAN (R 4.0.0)   
+##  rematch2       2.1.2    2020-05-01 [1] CRAN (R 4.0.0)   
+##  rlang          0.4.9    2020-11-26 [1] CRAN (R 4.0.3)   
+##  rprojroot      2.0.2    2020-11-15 [1] CRAN (R 4.0.3)   
+##  rstudioapi     0.13     2020-11-12 [1] CRAN (R 4.0.3)   
+##  scales         1.1.1    2020-05-11 [1] CRAN (R 4.0.0)   
+##  shiny          1.5.0    2020-06-23 [1] CRAN (R 4.0.2)   
+##  sourcetools    0.1.7    2018-04-25 [1] CRAN (R 4.0.0)   
+##  testthat       3.0.0    2020-10-31 [1] CRAN (R 4.0.2)   
+##  tibble         3.0.4    2020-10-12 [1] CRAN (R 4.0.2)   
+##  tidyr          1.1.2    2020-08-27 [1] CRAN (R 4.0.2)   
+##  tidyselect     1.1.0    2020-05-11 [1] CRAN (R 4.0.0)   
+##  utf8           1.1.4    2018-05-24 [1] CRAN (R 4.0.0)   
+##  vctrs          0.3.5    2020-11-17 [1] CRAN (R 4.0.3)   
+##  viridisLite    0.3.0    2018-02-01 [1] CRAN (R 4.0.0)   
+##  waldo          0.2.3    2020-11-09 [1] CRAN (R 4.0.3)   
+##  withr          2.3.0    2020-09-22 [1] CRAN (R 4.0.2)   
+##  xtable         1.8-4    2019-04-21 [1] CRAN (R 4.0.0)   
 ## 
 ## [1] /Library/Frameworks/R.framework/Versions/4.0/Resources/library</code></pre>
 
