--- a/sh00_intro-to-dashboards.html
+++ b/sh00_intro-to-dashboards.html
@@ -417,9 +417,16 @@ div.tocify {
 <h1 number="3"><span class="header-section-number">3</span> Previous lessons</h1>
 <p>All of the exercises and lessons are available <a href="https://mjfrigaard.github.io/r-meetup-tutorials/">here</a>, but you can also read more about <a href="https://ggplot2.tidyverse.org/index.html"><code>ggplot2</code></a> on the tidyverse website, and in the <a href="https://r4ds.had.co.nz/data-visualisation.html">Data Visualisation</a> chapter of R for Data Science.</p>
 </div>
-<div id="load-the-tidyverse" class="section level1" number="4">
-<h1 number="4"><span class="header-section-number">4</span> Load the <code>tidyverse</code></h1>
-<p>The main packages we’re going to use are <code>dplyr</code>, <code>tidyr</code>, and <code>ggplot2</code>. These are all part of the <code>tidyverse</code>, so we’ll import this package below:</p>
+<div id="load-the-tidyverse-and-flexdashboard" class="section level1" number="4">
+<h1 number="4"><span class="header-section-number">4</span> Load the <code>tidyverse</code> and <code>flexdashboard</code></h1>
+<p>The main packages we’re going to use are <code>dplyr</code>, <code>tidyr</code>, <code>ggplot2</code>, and <code>flexdashboard</code>.</p>
+<pre class="r"><code>library(tidyverse)
+library(skimr)
+library(janitor)
+library(flexdashboard)</code></pre>
+</div>
+<div id="what-should-go-into-a-dashboard" class="section level1" number="5">
+<h1 number="5"><span class="header-section-number">5</span> What should go into a dashboard?</h1>
 </div>
 
 <i class="fab fa-creative-commons fa-2x"></i><i class="fab fa-creative-commons-by fa-2x"></i><i class="fab fa-creative-commons-sa fa-2x"></i>
