--- a/sh00_intro-to-dashboards.html
+++ b/sh00_intro-to-dashboards.html
@@ -11,7 +11,7 @@
 
 
 
-<title>Introduction to Dashboards</title>
+<title>Introduction to Dashboards (under construction)</title>
 
 <script src="site_libs/header-attrs-2.5.3/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -397,7 +397,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">Introduction to Dashboards</h1>
+<h1 class="title toc-ignore">Introduction to Dashboards (under construction)</h1>
 
 </div>
 
