--- a/bk02_flow-control-statements.html
+++ b/bk02_flow-control-statements.html
@@ -11,7 +11,7 @@
 
 
 
-<title>R Programming: Subsetting and Flow Control Statements</title>
+<title>Subsetting and Flow Control Statements (under construction)</title>
 
 <script src="site_libs/header-attrs-2.5.3/header-attrs.js"></script>
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
@@ -385,7 +385,7 @@ div.tocify {
 
 
 
-<h1 class="title toc-ignore">R Programming: Subsetting and Flow Control Statements</h1>
+<h1 class="title toc-ignore">Subsetting and Flow Control Statements (under construction)</h1>
 
 </div>
 
@@ -410,14 +410,13 @@ num_vec[5]
 </div>
 <div id="subset-using-1" class="section level3" number="1.1.2">
 <h3 number="1.1.2"><span class="header-section-number">1.1.2</span> subset using <code>$</code></h3>
-<p>We can subset using the <code>$</code> when we’re</p>
 </div>
 </div>
 <div id="subset-data-framestibbes" class="section level2 tabset" number="1.2">
 <h2 class="tabset" number="1.2"><span class="header-section-number">1.2</span> Subset data frames/tibbes</h2>
 </div>
-<div id="subset" class="section level2 tabset" number="1.3">
-<h2 class="tabset" number="1.3"><span class="header-section-number">1.3</span> Subset</h2>
+<div id="subset-lists" class="section level2 tabset" number="1.3">
+<h2 class="tabset" number="1.3"><span class="header-section-number">1.3</span> Subset lists</h2>
 </div>
 <div id="if" class="section level2 tabset" number="1.4">
 <h2 class="tabset" number="1.4"><span class="header-section-number">1.4</span> <code>if</code></h2>
