--- a/index.html
+++ b/index.html
@@ -326,6 +326,7 @@ $(document).ready(function () {
 <h3>Reproducible Analysis With R Markdown</h3>
 <ul>
 <li><a href="mk00_rmarkdown-exercises.html">Reproducible Reporting With R Markdown</a> <em>building reproducible reports</em></li>
+<li><a href="mk01_rmarkdown-tables.html">Displaying Tables With R Markdown (under construction)</a> <em>table packages for reproducible reports</em></li>
 </ul>
 </div>
 <div id="data-manipulation-and-transformation" class="section level3">
@@ -334,6 +335,7 @@ $(document).ready(function () {
 <li><a href="dt00_data-manipulations.html">Introduction to Data Manipulation</a> <em>introduction to wrangling data</em></li>
 <li><a href="dt01_data-trans-joins-exercises.html">Reshaping, Transforming, and Joining Data in R</a> <em>transpose, pivot, split, and combine data</em></li>
 <li><a href="dt02_adv-data-manip-joins.html">Advanced Data Transformation and Manipulation</a> <em>dealing with complex data structures</em></li>
+<li><a href="dt03_scrape-wikipedia-data.html">Scraping Wikipedia Tables</a> <em>advanced wrangling example</em></li>
 </ul>
 </div>
 <div id="data-visualization" class="section level3">
