typos for lessons 1 & @

--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ $(document).ready(function () {
 <div id="reproducible-analysis-with-r-markdown" class="section level3">
 <h3>Reproducible Analysis With R Markdown</h3>
 <ul>
-<li><a href="mk00_rmarkdown-exercises.html">Reproducible Reporting With R Markdown</a> <em>building reproducible reports</em></li>
+<li><a href="mk00_rmarkdown-exercises.html">Getting Started With R Markdown</a> <em>building reproducible reports</em></li>
 <li><a href="mk01_rmarkdown-tables.html">Displaying Tables With R Markdown (under construction)</a> <em>table packages for reproducible reports</em></li>
 </ul>
 </div>
