move bk files around

--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@ $(document).ready(function () {
 <div id="introduction-to-r-rstudio" class="section level3">
 <h3>Introduction to R &amp; RStudio</h3>
 <ul>
-<li><a href="bk00_workflow-best-practices.html">R Workflow Best Practices</a> <em>managing code, data, and files</em></li>
-<li><a href="bk01_functions-and-objects.html">Introduction to R Programming</a> <em>functions and objects</em></li>
+<li><a href="bk00_functions-and-objects.html">Introduction to R Programming</a> <em>an introduction to functions and objects</em></li>
+<li><a href="bk01_workflow-best-practices.html">R Workflow Best Practices</a> <em>tips for managing your code, data, and files</em></li>
 <li><a href="bk02_flow-control-statements.html">Subsetting and Flow Control Statements (under construction)</a> <em>change the flow of your code</em></li>
 </ul>
 </div>
