--- a/gg00_intro-to-data-viz.html
+++ b/gg00_intro-to-data-viz.html
@@ -407,7 +407,7 @@ div.tocify {
 <div id="materials" class="section level1" number="2">
 <h1 number="2"><span class="header-section-number">2</span> Materials</h1>
 <p>The slides for this presentation are <a href="https://mjfrigaard.github.io/data-viz-intro/Index.html">here</a></p>
-<p>There is also an accompanying RStudio.Cloud project:</p>
+<p>There is also an accompanying <a href="https://rstudio.cloud/project/1973650">RStudio.Cloud project</a></p>
 </div>
 <div id="previous-lessons" class="section level1" number="3">
 <h1 number="3"><span class="header-section-number">3</span> Previous lessons</h1>
