--- a/gg01_data-viz-as-comm.html
+++ b/gg01_data-viz-as-comm.html
@@ -425,8 +425,8 @@ div.tocify {
 <div id="materials" class="section level1" number="2">
 <h1 number="2"><span class="header-section-number">2</span> Materials</h1>
 <ul>
-<li><p>Slides: <a href="https://mjfrigaard.github.io/data-viz-as-comm/Index.html" class="uri">https://mjfrigaard.github.io/data-viz-as-comm/Index.html</a></p></li>
-<li><p>RStudio Project: <a href="https://rstudio.cloud/project/1983257" class="uri">https://rstudio.cloud/project/1983257</a></p></li>
+<li><p>The slides for this lesson are <a href="https://mjfrigaard.github.io/data-viz-as-comm/Index.html">here</a></p></li>
+<li><p><a href="https://rstudio.cloud/project/1983257">RStudio.Cloud Project</a></p></li>
 </ul>
 </div>
 <div id="previous-lessons" class="section level1" number="3">
@@ -1580,7 +1580,7 @@ USCitiesMarJun %&gt;%
             y = 100, label = &quot;Data Not Available&quot;, 
             angle = 90, color = &quot;white&quot;) +
   lab_annotate</code></pre>
-<p><img src="img/geom_rectsol-1.png" width="100%" height="100%" /></p>
+<p><img src="img/geom_rect-sol-1.png" width="100%" height="100%" /></p>
 </div>
 <div id="labeling-values" class="section level2 tabset" number="8.3">
 <h2 class="tabset" number="8.3"><span class="header-section-number">8.3</span> Labeling Values</h2>
