--- a/index.html
+++ b/index.html
@@ -312,6 +312,10 @@ $(document).ready(function () {
 </div>
 
 
+<div id="roadmap" class="section level3">
+<h3>Roadmap</h3>
+<p>Below is a roadmap for the lessons and materials:</p>
+</div>
 <div id="introduction-to-r-rstudio" class="section level3">
 <h3>Introduction to R &amp; RStudio</h3>
 <ul>
@@ -331,7 +335,7 @@ $(document).ready(function () {
 <h3>Data Manipulation and Transformation</h3>
 <ul>
 <li><a href="dt00_data-manipulations.html">Introduction to Data Manipulation</a> <em>introduction to wrangling data</em></li>
-<li><a href="dt01_data-trans-joins-exercises.html">Reshaping, Transforming, and Joining Data in R</a> <em>transpose, pivot, split, and combine data</em></li>
+<li><a href="dt01_data-trans-joins-exercises.html">Reshaping and Joining Data in R</a> <em>transpose, pivot, split, and combine data</em></li>
 <li><a href="dt02_adv-data-manip-joins.html">Advanced Data Transformation and Manipulation</a> <em>dealing with complex data structures</em></li>
 <li><a href="dt03_scrape-wikipedia-data.html">Scraping Wikipedia Tables</a> <em>advanced wrangling example</em></li>
 </ul>
@@ -339,7 +343,7 @@ $(document).ready(function () {
 <div id="data-visualization" class="section level3">
 <h3>Data Visualization</h3>
 <ul>
-<li><a href="gg00_intro-to-data-viz.html">Introduction to Data Visualization with ggplot2</a> <em>introducing the grammar of graphics (ggplot2)</em></li>
+<li><a href="gg00_intro-to-data-viz.html">Introduction to Data Visualization with ggplot2</a> <em>an introduction to the grammar of graphics</em></li>
 <li><a href="gg01_data-viz-as-comm.html">Data Visualization as Communication</a> <em>using graphs to effectively share ideas</em></li>
 <li><a href="gg02_adv-data-viz.html">Advanced Data Visualization</a> <em>extending ggplot2</em></li>
 </ul>
